Ajout projet php refonte

--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
       <i class="fas fa-download mr-2"></i>
       Projet ligues
     </a>
+    <a class="btn btn-xl btn-outline-light" href="./Portfolio/projet-php-refonte/index.php">
+      <i class="fas fa-download mr-2"></i>
+      Projet-php-refonte
+    </a>
+    
   </section>
 
 
